fix(customer-list): fix scrollbar jumping issue
refactor(bodyClass): use lodash

--- a/app/modules/core/customers/customerList/_customer-list.scss
+++ b/app/modules/core/customers/customerList/_customer-list.scss
@@ -1,4 +1,6 @@
-.partnercustomers-list {
+.partnercustomers-list,
+.partnercustomers,
+.customer-overview {
   @extend %grid-subheader;
   @extend %page-background-white;
 
